# pdfsplit

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml  setup.cfg
pdfsplit/: console_main.py
sample/: .gitignore  README.md  pdf-1.6-appendices.txt  pdf-1.6-chapters.txt
tests/: test_parse_page_ranges.py
tests/resources/pagefiles/: all_complete_intervals.txt  all_singleton.txt  mixed.txt
