[tool.poetry]
name = "pdfsplit"
version = "0.1.0"
description = ""
authors = ["Elvin Yang <eyang@cs.utexas.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
PyPDF2 = "^1.26.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.8b0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
