[metadata]
name = pdfsplit
version = 0.1.0
description = A tool to split PDF files.
long_description = file: README.md
long_description_content_type = text/markdown
author = Elvin Yang
license = MIT
classifiers = [
    Development Status :: 3 - Alpha
]

[options]
packages =
    pdfsplit

[options.entry_points]
console_scripts =
    pdfsplit = pdfsplit.console_main:main
